Rework the counter, add pause capability.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="menu bottom row">
-      <div id="counter" class="small-6 column"></div>
+      <div id="counter" class="small-6 column" data-ng-click="counting = !counting"></div>
       <button id="next-button" type="button" data-ng-click="next()" class="small-6 column" data-ng-disabled="!enableNext">Next</button>
     </div>
   </div>
